# Ray-Tracer

./: CMakeLists.txt  Makefile  README.md  main.cpp  maths.cpp  maths.hpp  new-bench.py  raytracer  renderer.cpp  renderer.hpp  scene.txt
